--- a/setup/service/zookeeper.service
+++ b/setup/service/zookeeper.service
@@ -23,7 +23,7 @@ Type=simple
 User=training
 Group=training
 #Environment=JAVA_HOME=/home/train/epics-tools/jdk1.8.0_171
-ExecStart=/home/train/epics-tools/kafka_2.11-2.1.0/bin/zookeeper-server-start.sh /home/train/epics-tools/kafka_2.11-2.1.0y/config/zookeeper.properties
+ExecStart=/home/train/epics-tools/kafka_2.11-2.1.0/bin/zookeeper-server-start.sh /home/train/epics-tools/kafka_2.11-2.1.0/config/zookeeper.properties
 ExecStop=/home/train/epics-tools/kafka_2.11-2.1.0/bin/zookeeper-server-stop.sh
 
 [Install]
