--- a/setup/service/zookeeper.service
+++ b/setup/service/zookeeper.service
@@ -20,8 +20,8 @@ After=network.target remote-fs.target
 
 [Service]
 Type=simple
-User=training
-Group=training
+User=train
+Group=train
 #Environment=JAVA_HOME=/home/train/epics-tools/jdk1.8.0_171
 ExecStart=/home/train/epics-tools/services/kafka_2.11-2.1.0/bin/zookeeper-server-start.sh /home/train/epics-tools/services/kafka_2.11-2.1.0/config/zookeeper.properties
 ExecStop=/home/train/epics-tools/services/kafka_2.11-2.1.0/bin/zookeeper-server-stop.sh
