updating phoebus configuration file

--- a/setup/settings/phoebus.ini
+++ b/setup/settings/phoebus.ini
@@ -1,4 +1,17 @@
+# Channel access
 
-# Databrowser
+# ChannelFinder
+org.phoebus.channelfinder/channelfinder.serviceURL=http\://localhost:9090/ChannelFinder/
+
+# Databrowser preferences
+org.csstudio.trends.databrowser3/archives=Current|0|pbraw\://localhost:17665/retrieval
+org.csstudio.trends.databrowser3/urls=pbraw\://localhost:17665/retrieval
 org.csstudio.trends.databrowser3/update_period=0.5
 org.csstudio.trends.databrowser3/scroll_step=1
+
+# Logbook
+org.phoebus.logbook.ui/logbook_factory=olog
+
+# Olog
+org.phoebus.olog.api.OlogClient/olog_url=https\://localhost\:8181/Olog/resources
+
