--- a/setup/settings/phoebus.ini
+++ b/setup/settings/phoebus.ini
@@ -1,3 +1,13 @@
+# Top resources to show in "File" menu and toolbar
+#
+# Format:
+# uri1 | uri2,Display name 2 | uri3,Display name 3
+org.phoebus.ui/top_resources=file:/home/train/epics-tools/resources/main.bob?app=display_runtime,Main | pv://?sim://sine&loc://x(10)&app=pv_table,PV Table Example | http://www.google.com?app=web, Google
+
+# Home display file. "Home display" button will navigate to this display.
+org.phoebus.ui/home_display=file:/home/train/epics-tools/resources/main.bob?app=display_runtime,Main
+
+
 # Channel access
 
 # ChannelFinder
@@ -10,8 +20,8 @@ org.csstudio.trends.databrowser3/update_period=0.5
 org.csstudio.trends.databrowser3/scroll_step=1
 
 # Logbook
-org.phoebus.logbook.ui/logbook_factory=olog
+org.phoebus.logbook.ui/logbook_factory=inmemory
 
 # Olog
-org.phoebus.olog.api.OlogClient/olog_url=https\://localhost\:9191/Olog/resources
+# org.phoebus.olog.api.OlogClient/olog_url=https\://localhost\:9191/Olog/resources
 
