adding link to example screens

--- a/setup/settings/phoebus.ini
+++ b/setup/settings/phoebus.ini
@@ -2,7 +2,7 @@
 #
 # Format:
 # uri1 | uri2,Display name 2 | uri3,Display name 3
-org.phoebus.ui/top_resources=file:/home/train/epics-tools/resources/main.bob?app=display_runtime,Main | pv://?sim://sine&loc://x(10)&app=pv_table,PV Table Example | http://www.google.com?app=web, Google
+org.phoebus.ui/top_resources=file:/home/train/epics-tools/resources/main.bob?app=display_runtime,Main | examples:/01_main.bob?app=display_runtime,Example Display | pv://?sim://sine&loc://x(10)&app=pv_table,PV Table Example | http://www.google.com?app=web, Google
 
 # Home display file. "Home display" button will navigate to this display.
 org.phoebus.ui/home_display=file:/home/train/epics-tools/resources/main.bob?app=display_runtime,Main
