--- a/setup/settings/phoebus.ini
+++ b/setup/settings/phoebus.ini
@@ -7,6 +7,8 @@ org.phoebus.ui/top_resources=file:/home/train/epics-tools/resources/main.bob?app
 # Home display file. "Home display" button will navigate to this display.
 org.phoebus.ui/home_display=file:/home/train/epics-tools/resources/main.bob?app=display_runtime,Main
 
+# File browser home
+org.phoebus.applications.filebrowser/default_root=/home/train/epics-tools/resources
 
 # Channel access
 
